--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 # 公共配置文件
 spring:
   application:
-    name: oj
+    name: myoj-backend-user-service
+  rabbitmq:
+    host: localhost
+    port: 5672
+    password: guest
+    username: guest
   # 默认 dev 环境
   profiles:
     active: dev
@@ -12,30 +17,30 @@ spring:
   # session 配置
   session:
     # todo 取消注释开启分布式 session（须先配置 Redis）
-    # store-type: redis
+    store-type: redis
     # 30 天过期
     timeout: 2592000
   # 数据库配置
   # todo 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/oj
+    url: jdbc:mysql://47.108.114.160:3306/oj
     username: root
-    password: "@Qwdsrs020216"
-  # Redis 配置
-  # todo 需替换配置，然后取消注释
-#  redis:
-#    database: 1
-#    host: localhost
-#    port: 6379
-#    timeout: 5000
-#    password: 123456
+    password: root
+    # Redis 配置
+    # todo 需替换配置，然后取消注释
+  redis:
+    database: 1
+    host: localhost
+    port: 6379
+    timeout: 5000
+    password: 123456
   # Elasticsearch 配置
   # todo 需替换配置，然后取消注释
-#  elasticsearch:
-#    uris: http://localhost:9200
-#    username: root
-#    password: 123456
+  #  elasticsearch:
+  #    uris: http://localhost:9200
+  #    username: root
+  #    password: 123456
   # 文件上传
   servlet:
     multipart:
@@ -92,3 +97,4 @@ cos:
 codeSandbox:
   # Example、Remote、ThirdParty
   type: Remote
+
